# fixturedb

./: .gitignore  AGENTS.md  CODE_REVIEW_CHECKLIST.md  COLLECTION_CODE_QUALITY.md  METHODOLOGICAL_BASELINE_EVALUATION.md  MOCK_DETECTION_EXISTING_INFRASTRUCTURE.md  README.md  fixture_validation_report.md  pipeline.py  pyproject.toml  requirements.txt
collection/: README.md  __init__.py  __main__.py  agent_commit_detector.py  agent_corpus.py  agent_detector.py  agent_fixture_extractor.py  agent_patterns.py  agent_signal_primitives.py  ast_cache.py  between_group_comparison.py  classify_repos.py  cli_utils.py  clone_manager.py  clone_primitives.py  cloner.py  commit_checkout.py  complexity_provider.py  compute_agent_proportions.py  config.py  conventional_commits.py  corpus_utils.py  csv_adapter.py  dataset_c.py  dataset_exporter.py  dataset_pipeline.py  dataset_sampler.py  dataset_summary.py  dataset_validator.py  db.py  db_schema.py  dedupe_dataset_c_repos.py  detector.py  detector_framework_registry.py  detector_go.py  detector_java.py  detector_javascript.py  detector_python.py  detector_shared.py  diff_purity.py  (+47 more)
docs/: IMPLEMENTATION_TODO.md  INDEX.md  collection-quality-improvements.md  collection_roadmap.md
eda/: eda.py  eda_common.py  qualitative_eda.py  quantitative_eda.py
fixtures-from-agents/: category_proportions.json  dataset_c_java.csv  dataset_c_javascript.csv  dataset_c_python.csv  dataset_c_sample.csv  dataset_c_typescript.csv  java_agent_fixture_repos.csv  java_agent_fixtures.csv  javascript_agent_fixture_repos.csv  javascript_agent_fixtures.csv  python_agent_fixture_repos.csv  python_agent_fixtures.csv  typescript_agent_fixture_repos.csv
github-search-labeled/: SUMMARY.md  java.csv  javascript.csv  python.csv  typescript.csv
github-search-raw/: details.txt
internal-docs/: AGENT_DATASET_DIVERSITY_ANALYSIS.md  AGENT_DATASET_INVESTIGATION.md  AGENT_QC_SUMMARY.md  CLASSIFY_REPOS.md  COLLECTION_CODE_REVIEW.md  COLLECTION_IMPROVEMENT_REVIEW.md  CORPUS_STRUCTURE.md  EDA_COLOR_COHERENCE.md  EDA_COMPLETE_SUMMARY.md  EDA_IMPROVEMENTS_2026.md  EDA_INDEX.md  EDA_KEY_INSIGHTS.md  EDA_QUICK_REFERENCE.md  EXPORT_STATISTICS_CSV_PLAN.md  FALSE_POSITIVES_ROADMAP.md  FIXTUREDB_SPLIT_IMPLEMENTATION_PLAN.md  FIXTUREDB_SPLIT_TASK_BREAKDOWN.md  FIXTURE_DETECTION_ANALYSIS.md  ICSME_2026_ACADEMIC_REVIEW.md  ICSME_ACTION_PLAN.md  ICSME_COMPLETE_REVIEW_RESULTS.md  ICSME_CURRENT_STATUS.md  ICSME_REVIEWER_CRITIQUE.md  IMPLEMENTATION_GUIDE_PRECISION.md  IMPLEMENTATION_STATUS.md  LANGUAGE_SPECIFIC_PATTERNS.md  METHODOLOGY_CORRECTIONS_SUMMARY.md  METRICS_CALCULATION_METHODS.md  MIGRATION_PHASES.md  MIGRATION_TESTS.md  MOCK_DETECTION_ANALYSIS.md  PSEUDOCODE_ANALYSIS.md  (+15 more)
(+374 files in other folders)
