[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icsme-nier-2026"
version = "0.1.0"
description = "A project for ICSME NIER 2026"
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
# IMPORTANT: Restrict testpaths to 'tests/' to prevent pytest from discovering tests
# in the clones/ directory. The clones/ folder contains hundreds of external open-source
# repositories with their own tests, frameworks, and dependencies.
# Without this configuration, pytest would:
# - Attempt to import and run external tests
# - Require heavy external dependencies (TensorFlow, etc.)
# - Take ~100x longer to execute
# - Fail due to missing external dependencies
# See docs/reference/testing.md for more details.
testpaths = ["tests"]
norecursedirs = ["clones", ".git", "venv", "dist", "build"]
addopts = "-q"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "C", "Q", "B", "UP"]
ignore = ["E501", "E402", "C901", "B904"]
exclude = [
    "eda",
    "tests/eda",
    "zenodo-examples",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
files = ["collection"]

[tool.isort]
profile = "black"
